// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should match snapshot for default button 1`] = `
<button
  aria-disabled="false"
  class="root sizeMedium variantSecondary"
>
  <span
    class="btnContent"
  />
</button>
`;

exports[`<Button /> when as button should use html button element by default 1`] = `
<button
  aria-disabled="false"
  class="root sizeMedium variantSecondary"
>
  <span
    class="btnContent"
  />
</button>
`;

exports[`<Button /> when colour variants should match snapshot for Danger button 1`] = `
<button
  aria-disabled="false"
  class="root sizeMedium variantDanger"
>
  <span
    class="btnContent"
  />
</button>
`;

exports[`<Button /> when colour variants should match snapshot for Primary button 1`] = `
<button
  aria-disabled="false"
  class="root sizeMedium variantPrimary"
>
  <span
    class="btnContent"
  />
</button>
`;

exports[`<Button /> when colour variants should match snapshot for Secondary button 1`] = `
<button
  aria-disabled="false"
  class="root sizeMedium variantSecondary"
>
  <span
    class="btnContent"
  />
</button>
`;

exports[`<Button /> when custom component should use html anchor element if href value exists 1`] = `
<a
  aria-disabled="false"
  class="root sizeMedium variantSecondary"
  href="abc"
>
  <span
    class="btnContent"
  />
</a>
`;

exports[`<Button /> when isFullWidth should match snapshot 1`] = `
<button
  aria-disabled="false"
  class="root sizeMedium variantSecondary fullWidth"
>
  <span
    class="btnContent"
  />
</button>
`;

exports[`<Button /> when loading should match snapshot for default button 1`] = `
<button
  aria-disabled="true"
  class="root sizeMedium variantSecondary loading"
  disabled=""
>
  <span
    class="btnContent"
  />
  <div
    class="root sizeMedium variantSecondary spinner"
  >
    <svg
      class="circular"
      viewBox="25 25 50 50"
    >
      <circle
        class="path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
      />
    </svg>
  </div>
</button>
`;

exports[`<Button /> when loading should match snapshot for medium button 1`] = `
<button
  aria-disabled="true"
  class="root sizeMedium variantSecondary loading"
  disabled=""
>
  <span
    class="btnContent"
  />
  <div
    class="root sizeMedium variantSecondary spinner"
  >
    <svg
      class="circular"
      viewBox="25 25 50 50"
    >
      <circle
        class="path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
      />
    </svg>
  </div>
</button>
`;

exports[`<Button /> when loading should match snapshot for small button 1`] = `
<button
  aria-disabled="true"
  class="root sizeSmall variantSecondary loading"
  disabled=""
>
  <span
    class="btnContent"
  />
  <div
    class="root sizeSmall variantSecondary spinner"
  >
    <svg
      class="circular"
      viewBox="25 25 50 50"
    >
      <circle
        class="path"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-miterlimit="10"
      />
    </svg>
  </div>
</button>
`;

exports[`<Button /> when rounded should match snapshot 1`] = `
<button
  aria-disabled="false"
  class="root sizeMedium variantSecondary rounded"
>
  <span
    class="btnContent"
  />
</button>
`;

exports[`<Button /> when size variant should match snapshot for medium button 1`] = `
<button
  aria-disabled="false"
  class="root sizeMedium variantSecondary"
>
  <span
    class="btnContent"
  />
</button>
`;

exports[`<Button /> when size variant should match snapshot for small button 1`] = `
<button
  aria-disabled="false"
  class="root sizeSmall variantSecondary"
>
  <span
    class="btnContent"
  />
</button>
`;
